k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rumi-restaurant-web
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: rumi-restaurant-web
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
